[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easytable"
version = "0.2.0"
authors = [
  { name="Daniel Jung", email="proggy-contact@mailbox.org" },
]
maintainers = [
  { name="Daniel Jung", email="proggy-contact@mailbox.org" },
]
description = "Create table representations from various data structures, using either simple ASCII characters or unicode box-drawing characters."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]

[project.urls]
"Source" = "https://github.com/proggy/easytable"
"Homepage" = "https://github.com/proggy/easytable"
"Bug Tracker" = "https://github.com/proggy/easytable/issues"
